--- a/pages/boost/boost.template.html
+++ b/pages/boost/boost.template.html
@@ -97,16 +97,25 @@
         <div class="row activesModal--titleWrapper">
             <div class="col d-flex justify-content-between">
                 <h3 class="activesModal--title">
-                    <span id="taskModal--titleContent"></span>
                 </h3>
                 <button class="activesModal--close" id="activesModal--close" onclick="hideTaskModal()">
                     <img src="https://cdn.umperium.com/static/icon-close.svg" alt="close">
                 </button>
             </div>
         </div>
-        <div class="row z-1 position-relative">
+        <div class="row flex-column z-1 position-relative">
+            <div class="col">
+                <h3 class="activesModal--title taskModal--title">
+                    <span id="taskModal--titleContent"></span>
+                </h3>
+            </div>
             <div class="col">
                 <button class="activesModal--button" id="taskModal--buttonSubscribe" data-id="" data-url="" data-needs-verification="" onclick="doTask(this)">{{text.button_subscribe}}</button>
+            </div>
+            <div class="col" id="taskModal--buttonCheckText">
+                <h3 class="activesModal--title taskModal--title">{{text.button_check_text}}</h3>
+            </div>
+            <div class="col">
                 <button class="activesModal--button" id="taskModal--buttonCheck" data-id="" onclick="checkTask(this)">{{text.button_check}}</button>
             </div>
         </div>
